@startuml Seller Antiquarian
skinparam linetype ortho

entity Books {
    + bookId
    + isbn
    + title
    + author
    + year
}

entity Copies {
    + copyId
    + seller
    + status
    + price
    + weight
    + buyInPrice
    + soldDate
}

entity Types {
    + typeId
    + name
}

entity Genres {
    + genreId
    + name
}

Books "1 " -- "N " Copies
Copies "N " -- "1  " Types
Copies "N  " -- "1 " Genres
@enduml
